--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -175,6 +175,7 @@
     position: relative;
   
     img {
+      // height: 100%;
       width: 100%;
       object-fit: contain;
       z-index: 1;
