--- a/src/container/Skills/Skills.scss
+++ b/src/container/Skills/Skills.scss
@@ -18,13 +18,18 @@
   }
   
   .app__skills-list {
-    flex: 1;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: flex-start;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    height: fit-content;
+    // flex: 1;
+    // display: flex;
+    // flex-wrap: wrap;
+    // justify-content: flex-start;
+    // align-items: flex-start;
   
-    margin-right: 5rem;
+    // margin-right: 5rem;
+
+    // height: auto;
   
     @media screen and (max-width: 900px) {
       margin-right: 0;
